tests/v05-vertical-slice/reject/unknown_named_tuple_type.hew
// Reject: a tuple that contains a named user type with no known ValueClass.
// Under D10, nested named types must be rejected at the MIR boundary with
// UnknownType before Stage 9 textual emission.
fn f(x: (Foo, i64)) -> (Foo, i64) {
    return x;
}
